# kinopoisk-unofficial-api

./: .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
kinopoisk/: __init__.py  client.py
kinopoisk/data/: __init__.py  age_raiting.py  blooper.py  box_office.py  description.py  fact.py  id.py  name.py  person.py  poster.py  production_status.py  raiting.py  review.py  types.py  url.py
kinopoisk/data/filters/: __init__.py  base_filter.py  country.py  genre.py
kinopoisk/data/movie/: __init__.py  base_movie.py  film.py
kinopoisk/data/movie/tv_series/: __init__.py  episode.py  season.py  tv_series.py
kinopoisk/errors/: __init__.py  invalid_token.py  too_many_requests.py
kinopoisk/utils/: __init__.py
test/: test.py
test/client/: __init__.py  get_box_office.py  get_facts.py  get_images.py  get_movie_data.py  get_person_data.py  get_persons_of_movie.py  get_reviews.py  get_seasons_data.py  get_sequels_and_prequels.py  get_similars.py  search_movie.py  search_movie_by_keyword.py  search_person.py  some.py
